fix : corrige le probleme d'alignement des card dans le composant à propos

--- a/src/styles.css
+++ b/src/styles.css
@@ -7,13 +7,7 @@
 body{
   overflow-x:hidden; 
 }
-.body-background {
-  background: #ffd89b; /* fallback for old browsers */
-  background: -webkit-linear-gradient(to top, #53A0FD, #FFC66D); /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to top, #53A0FD, #FFC66D); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-  width: 100%;
-  height: 100%;
-}
+
 .btnDry{
   background-color: #53A0FD;
   border-radius: 25px;
